--- a/src/i18n/locale-ca.json
+++ b/src/i18n/locale-ca.json
@@ -1,1 +1,12 @@
-{}
+{
+  "TEMPLATE_HEADERS_LABEL_NAME": "Nom de la plantilla",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT": "Asumpte (Referència)",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_TRANSLATION": "Asumpte (${language})",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_CATALAN": "Asumpte (calalà)",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_SPANISH": "Asumpte (castellà)",
+  "TEMPLATE_HEADERS_LABEL_RECIPIENT": "Destinatari (TO)",
+  "TEMPLATE_HEADERS_LABEL_BCC": "Destinatari en còpia oculta (BCC)",
+  "TEMPLATE_HEADERS_LABEL_LANGUAGE_SOURCE": "Font de l'idioma",
+  "TEMPLATE_HEADERS_LABEL_MODEL_INTERNAL_NAME": "Nom intern del model",
+  "END": "Final"
+}
