--- a/src/i18n/locale-es.json
+++ b/src/i18n/locale-es.json
@@ -1,1 +1,12 @@
-{}
+{
+  "TEMPLATE_HEADERS_LABEL_NAME": "Nombre de la plantilla",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT": "Asunto (Referencia)",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_TRANSLATION": "Asunto (${language})",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_CATALAN": "Asunto (calalán)",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_SPANISH": "Asunto (castellano)",
+  "TEMPLATE_HEADERS_LABEL_RECIPIENT": "Destinataria (TO)",
+  "TEMPLATE_HEADERS_LABEL_BCC": "Destinataria en copia oculta (BCC)",
+  "TEMPLATE_HEADERS_LABEL_LANGUAGE_SOURCE": "Fuente del idioma",
+  "TEMPLATE_HEADERS_LABEL_MODEL_INTERNAL_NAME": "Nombre interno del modelo",
+  "END": "Final"
+}
