✨ Add eu and gl subject translations
Co-authored-by: Beatrigz <beatriz.plana@somenergia.coop>

--- a/src/i18n/locale-ca.json
+++ b/src/i18n/locale-ca.json
@@ -4,6 +4,8 @@
   "TEMPLATE_HEADERS_LABEL_SUBJECT_TRANSLATION": "Asumpte (${language})",
   "TEMPLATE_HEADERS_LABEL_SUBJECT_CATALAN": "Asumpte (calalà)",
   "TEMPLATE_HEADERS_LABEL_SUBJECT_SPANISH": "Asumpte (castellà)",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_EUSKERA": "Asumpte (euskera)",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_GALLEGO": "Asumpte (galec)",
   "TEMPLATE_HEADERS_LABEL_RECIPIENT": "Destinatari (TO)",
   "TEMPLATE_HEADERS_LABEL_BCC": "Destinatari en còpia oculta (BCC)",
   "TEMPLATE_HEADERS_LABEL_LANGUAGE_SOURCE": "Font de l'idioma",
