--- a/src/i18n/locale-en.json
+++ b/src/i18n/locale-en.json
@@ -4,6 +4,8 @@
   "TEMPLATE_HEADERS_LABEL_SUBJECT_TRANSLATION": "Subject (${language})",
   "TEMPLATE_HEADERS_LABEL_SUBJECT_CATALAN": "Subject (catalan)",
   "TEMPLATE_HEADERS_LABEL_SUBJECT_SPANISH": "Subject (spanish)",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_EUSKERA": "Subject (euskera)",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_GALLEGO": "Subject (galec)",
   "TEMPLATE_HEADERS_LABEL_RECIPIENT": "Recipient (TO)",
   "TEMPLATE_HEADERS_LABEL_BCC": "Background Carbon Copy (BCC)",
   "TEMPLATE_HEADERS_LABEL_LANGUAGE_SOURCE": "Language Source",
