--- a/src/i18n/locale-es.json
+++ b/src/i18n/locale-es.json
@@ -4,6 +4,8 @@
   "TEMPLATE_HEADERS_LABEL_SUBJECT_TRANSLATION": "Asunto (${language})",
   "TEMPLATE_HEADERS_LABEL_SUBJECT_CATALAN": "Asunto (calalán)",
   "TEMPLATE_HEADERS_LABEL_SUBJECT_SPANISH": "Asunto (castellano)",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_EUSKERA": "Asunto (euskera)",
+  "TEMPLATE_HEADERS_LABEL_SUBJECT_GALLEGO": "Asunto (galec)",
   "TEMPLATE_HEADERS_LABEL_RECIPIENT": "Destinataria (TO)",
   "TEMPLATE_HEADERS_LABEL_BCC": "Destinataria en copia oculta (BCC)",
   "TEMPLATE_HEADERS_LABEL_LANGUAGE_SOURCE": "Fuente del idioma",
