--- a/src/i18n/locale-en.json
+++ b/src/i18n/locale-en.json
@@ -5,6 +5,7 @@
   "TEMPLATE_HEADERS_LABEL_SUBJECT_CATALAN": "Subject (catalan)",
   "TEMPLATE_HEADERS_LABEL_SUBJECT_SPANISH": "Subject (spanish)",
   "TEMPLATE_HEADERS_LABEL_RECIPIENT": "Recipient (TO)",
+  "TEMPLATE_HEADERS_LABEL_CC": "Carbon Copy (CC)",
   "TEMPLATE_HEADERS_LABEL_BCC": "Background Carbon Copy (BCC)",
   "TEMPLATE_HEADERS_LABEL_LANGUAGE_SOURCE": "Language Source",
   "TEMPLATE_HEADERS_LABEL_MODEL_INTERNAL_NAME": "Model internal name",
